add missing i18n from Welcome page view, Background image section CCBUGS: 376438

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -52,23 +52,23 @@
               <div class="row">
                 <table class="col-sm-12 table table-hover">
                   <tr>
-                    <td width="10%"><h4>Author:</h4></td>
+                    <td width="10%"><h4>%9</h4></td>
                     <td><h4>Matthieu Lapadu-Hargues</h4></td>
                   </tr>
                   <tr>
-                    <td width="10%"><h4>Location:</h4></td>
+                    <td width="10%"><h4>%10</h4></td>
                     <td><h4><a class="info-link" href="https://fr.wikipedia.org/wiki/%C3%89chandon">Echandon river, La Fuye, Indre et Loire, France</a></h4></td>
                   </tr>
                   <tr>
-                    <td width="10%"><h4>Date:</h4></td>
+                    <td width="10%"><h4>%11</h4></td>
                     <td><h4>April 2021</h4></td>
                   </tr>
                   <tr>
-                    <td width="10%"><h4>Camera:</h4></td>
+                    <td width="10%"><h4>%12</h4></td>
                     <td><h4>Nikon 7200</h4></td>
                   </tr>
                   <tr>
-                    <td width="10%"><h4>Lens:</h4></td>
+                    <td width="10%"><h4>%13</h4></td>
                     <td><h4>AF-S DX VR Zoom-Nikkor 16-85mm f/3.5-5.6G ED</h4></td>
                   </tr>
                 </table>
