Update digiKAm and Showfoto 7.6.0 splashscreens and background photo from Matthieu LAPADU-HARGUES. CCMAIL: mlhpub@free.fr

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -57,11 +57,11 @@
                   </tr>
                   <tr>
                     <td width="10%"><h4>%11</h4></td>
-                    <td><h4><a class="info-link" href="https://fr.wikipedia.org/wiki/%C3%89chandon">Echandon river, La Fuye, Indre et Loire, France</a></h4></td>
+                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Ch%C3%A2teau_de_Chenonceau">Chenonceau castle, Franceuil, Indre et Loire, France</a></h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%12</h4></td>
-                    <td><h4>April 2021</h4></td>
+                    <td><h4>August 2008</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%13</h4></td>
@@ -69,7 +69,7 @@
                   </tr>
                   <tr>
                     <td width="10%"><h4>%14</h4></td>
-                    <td><h4>AF-S DX VR Zoom-Nikkor 16-85mm f/3.5-5.6G ED</h4></td>
+                    <td><h4>AF Zoom-Nikkor 80-200mm f/2.8D ED</h4></td>
                   </tr>
                 </table>
               </div>
