New digiKam and Showfoto 8.0.0 splash-creens from Thomas Steffen CCMAIL: steffenthomas@t-online.de

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -53,7 +53,7 @@
                 <table class="col-sm-12 table table-hover">
                   <tr>
                     <td width="10%"><h4>%10</h4></td>
-                    <td><h4>Matthieu Lapadu-Hargues</h4></td>
+                    <td><h4>Thomas Steffen</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%11</h4></td>
@@ -61,15 +61,15 @@
                   </tr>
                   <tr>
                     <td width="10%"><h4>%12</h4></td>
-                    <td><h4>August 2008</h4></td>
+                    <td><h4>May 2021</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%13</h4></td>
-                    <td><h4>Nikon 7200</h4></td>
+                    <td><h4>Sony ILCE-7RM3</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%14</h4></td>
-                    <td><h4>AF Zoom-Nikkor 80-200mm f/2.8D ED</h4></td>
+                    <td><h4>FE 100mm F2.8 STF GM OSS</h4></td>
                   </tr>
                 </table>
               </div>
