add location information

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -57,7 +57,7 @@
                   </tr>
                   <tr>
                     <td width="10%"><h4>%11</h4></td>
-                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Ch%C3%A2teau_de_Chenonceau">Chenonceau castle, Franceuil, Indre et Loire, France</a></h4></td>
+                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Gondershausen">Rapeseed Fields Canola Landscape, Gondershausen, Germany</a></h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%12</h4></td>
