Add digiKAm 7.7.0 background photo from Tom Laville CCMAIL: laville.tom16@gmail.com

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -53,23 +53,23 @@
                 <table class="col-sm-12 table table-hover">
                   <tr>
                     <td width="10%"><h4>%10</h4></td>
-                    <td><h4>Matthieu Lapadu-Hargues</h4></td>
+                    <td><h4>Tom Laville</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%11</h4></td>
-                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Ch%C3%A2teau_de_Chenonceau">Chenonceau castle, Franceuil, Indre et Loire, France</a></h4></td>
+                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Lofoten">Lofoten Islands, Nordland, Norway</a></h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%12</h4></td>
-                    <td><h4>August 2008</h4></td>
+                    <td><h4>September 2020</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%13</h4></td>
-                    <td><h4>Nikon 7200</h4></td>
+                    <td><h4>Pentax K70</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%14</h4></td>
-                    <td><h4>AF Zoom-Nikkor 80-200mm f/2.8D ED</h4></td>
+                    <td><h4>A Series Lens 15mm</h4></td>
                   </tr>
                 </table>
               </div>
