add background phot for 7.8.0 release from Thomas Caswell

--- a/core/data/about/main.html
+++ b/core/data/about/main.html
@@ -53,23 +53,23 @@
                 <table class="col-sm-12 table table-hover">
                   <tr>
                     <td width="10%"><h4>%10</h4></td>
-                    <td><h4>Tom Laville</h4></td>
+                    <td><h4>Thomas Caswell</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%11</h4></td>
-                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Lofoten">Lofoten Islands, Nordland, Norway</a></h4></td>
+                    <td><h4><a class="info-link" href="https://en.wikipedia.org/wiki/Lofoten">Treman State Park, Ithaca, NY, USA</a></h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%12</h4></td>
-                    <td><h4>September 2020</h4></td>
+                    <td><h4>September 2010</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%13</h4></td>
-                    <td><h4>Pentax K70</h4></td>
+                    <td><h4>Nikon D5000</h4></td>
                   </tr>
                   <tr>
                     <td width="10%"><h4>%14</h4></td>
-                    <td><h4>A Series Lens 15mm</h4></td>
+                    <td><h4>AF-S DX VR Zoom-Nikkor 18-55mm f/3.5-5.6G</h4></td>
                   </tr>
                 </table>
               </div>
